# alpaca-booking

./: .editorconfig  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  initialise-data.sh  manage.py  pyproject.toml  runmanage.sh
.github/workflows/: node.js.yml
.kiro/steering/: alpaca-booking-project.md
alpacabooking/: admin.py  apps.py  booking_service.py  models.py  serializers.py  urls.py  views.py
alpacabooking/fixtures/: base-data.yaml  groups.yaml
alpacabooking/management/commands/: initialize-test-data.py  set-default-password.py
alpacabooking/migrations/: 0001_initial.py  0002_animal.py  0002_remove_booking_total_price.py
alpacabooking/tests/: test_test.py
alpakabooking-fe/: README.md  angular.json  package.json
alpakabooking-fe/src/: index.html
alpakabooking-fe/src/app/: app.component.spec.ts  app.component.ts
bruno/AlpakaBooking/: .env  bruno.json
bruno/AlpakaBooking/Booking/: GetBookings.bru  PostBooking.bru
bruno/AlpakaBooking/Events/: GetEvents.bru  PostEvent.bru
bruno/AlpakaBooking/environments/: local.bru
bruno/AlpakaBooking/login/: as admin.bru  as felix.bru  as laura.bru  token refresh.bru
config/: asgi.py  settings.py  urls.py  wsgi.py
env/: dev-local-db.env  dev.env  secrets.sample.env
fe/: .prettierignore  .prettierrc  angular.json  package-lock.json  package.json
fe/src/: index.html  styles.scss
fe/src/app/: app.component.html  app.component.scss  app.component.ts  app.config.ts  app.routes.ts
fe/src/app/auth/: auth.guard.ts  auth.interceptor.ts  auth.service.ts
fe/src/app/components/animal-card/: animal-card.component.html  animal-card.component.scss  animal-card.component.ts
fe/src/app/components/footer/: footer.component.html  footer.component.scss  footer.component.ts
fe/src/app/components/header/: header.component.html  header.component.scss  header.component.ts
fe/src/app/components/login/: login.component.html  login.component.scss  login.component.ts
fe/src/app/components/mobile-header/: mobile-header.component.html  mobile-header.component.scss  mobile-header.component.ts
fe/src/app/config/: icon.config.ts
fe/src/app/models/: animal.model.ts
fe/src/app/pages/: animal-page.ts  login-page.ts
fe/src/app/pages/admin-panel/: admin-panel.component.html  admin-panel.component.scss  admin-panel.component.ts
fe/src/app/pages/animalpage/: animalpage.component.html  animalpage.component.scss  animalpage.component.ts
fe/src/app/pages/directionspage/: directionspage.component.html  directionspage.component.ts
fe/src/app/pages/homepage/: homepage.component.html  homepage.component.scss  homepage.component.ts
fe/src/app/pages/loginpage/: loginpage.component.html  loginpage.component.scss  loginpage.component.ts
fe/src/app/pages/tours-events/: tours-events.component.html  tours-events.component.scss  tours-events.component.ts
fe/src/app/services/: animal-api.service.ts  animal.service.ts  scroll.service.ts
fe/src/styles/: fonts.scss  global.scss  index.scss  primeng-overrides.scss  variables.scss
rosenhof/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: README.md  format-code.sh  setup-git-hooks.sh
