[project]
name = "alpakabooking"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "django>=5.1.6",
    "mypy>=1.15.0",
    "djangorestframework>=3.15.2",
    "psycopg2-binary>=2.9.10",
    "pytz>=2025.1",
    "pyyaml>=6.0.2",
    "pytest>=8.3.5",
    "pytest-django>=4.11.1",
    "djangorestframework-simplejwt>=5.5.0",
    "django-cors-headers>=4.7.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "rosenhof.settings"
